@@ -127,6 +127,10 @@ IN DEVELOPMENT
      display a user friendly message instead of a traceback.
      (Ian Clatworthy, #115601)
 
+   * Don't catch the exceptions related to the http pipeline status before
+     retrying an http request or some programming errors may be masked.
+     (Vincent Ladeuil, #160012)
+
    * Make sure to use ``O_BINARY`` when opening files to check their
      sha1sum. (Alexander Belchenko, John Arbash Meinel, #153493)
 
